src/test/ui/issues/issue-10291.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/issue-10291.rs:3:9
   |
LL |         x
   |         ^
   |
note: ...the reference is valid for the anonymous lifetime #1 defined here...
  --> $DIR/issue-10291.rs:2:69
   |
LL |       drop::<Box<dyn for<'z> FnMut(&'z isize) -> &'z isize>>(Box::new(|z| {
   |  _____________________________________________________________________^
LL | |         x
LL | |     }));
   | |_____^
note: ...but the borrowed content is only valid for the lifetime `'x` as defined here
  --> $DIR/issue-10291.rs:1:9
   |
LL | fn test<'x>(x: &'x isize) {
   |         ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0312`.
